<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rcarb.popularmovies.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="15dp"
            android:background="#b0e0e6"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:padding="35dp"


            />

        <LinearLayout
            android:id="@+id/rl_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                android:paddingLeft="36dp"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/release_date"
                    android:layout_marginLeft="22dp"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/not_favorite"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_below="@+id/user_rating"
                    android:layout_marginLeft="22dp"
                    android:contentDescription="@string/not_filled"
                    android:src="@drawable/empty_star" />

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignLeft="@id/not_favorite"
                    android:layout_below="@id/user_rating"
                    android:layout_marginLeft="22dp"
                    android:contentDescription="@string/is_filled"
                    android:src="@drawable/filled_star" />
            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/movieDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:padding="15dp" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#c0c0c0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/trailer_section"
            android:textSize="20sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/trailer1_layout">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="45dp"
                android:src="@drawable/play_button"
                android:id="@+id/trailer1_button"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:text="@string/trailer_label1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp" />


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="#c0c0c0"
            android:id="@+id/view1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/trailer2_layout">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="45dp"
                android:src="@drawable/play_button"
                android:id="@+id/trailer2_button"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:text="@string/trailer_label2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="#c0c0c0"
            android:id="@+id/view2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/trailer3_layout">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="45dp"
                android:src="@drawable/play_button"
                android:id="@+id/trailer3_button"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:text="@string/trailer_label3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="#c0c0c0"
            android:id="@+id/view3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/review_label"
            android:textSize="20sp" />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reviews_rv">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</ScrollView>